HUE-6869 [assist] Fix layout issue in the functions assist panel
(cherry picked from commit c31df4653aecc7a0116c5ce1423e1cf39875608d)

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -651,6 +651,7 @@
   margin: 0 0 0 8px;
 }
 
+.assist-function-details,
 .assist-docs-details {
   border-top: 2px solid @cui-default-border-color;
   margin-top: 5px;
